--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <div class="form-row submit-row">
                 <input type="submit" value="Submit">
             </div>
+            <div class="form-row output-value-cont">
+                <label for="output-value">Estimated Compensation ($):</label>
+                <span id="output-value">0</span>
+            </div>
         </div>
     </main>
 <script  src="index.js"></script>    
