--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="title-desc-links-cont"> 
             <div class="title-desc"> 
-                <h1>Brain Injury Settlement Calculator</h1>
+                <h1>Injury Settlement Calculator</h1>
                 <p>The Brain Injury Settlement Calculator is a valuable tool used to determine the fair settlement value for individuals who have suffered brain injuries due to various reasons. It calculates the monetary compensation one should receive for the pain, suffering, medical bills, and lost income resulting from the injury.</p>
             </div>
             <div class="calc-links-cont">
